[package]
name = "nonograms-rs"
version = "0.1.0"
authors = ["Bartek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.116.0"
rand = "0.8.0"
find_folder = "0.3.0"
piston = "0.52.1"
piston2d-touch_visualizer = "0.29.0"